# reml

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  lttngtools.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
reml/: __init__.py  babeltrace.py  babeltrace1.py  babeltrace2.py  cli.py  config.py  lttngtools.py  project.py
requirements/: dev.txt  prod.txt
tests/: __init__.py  test_reml.py
