[tool.poetry]
name = "reml"
version = "0.1.0"
description = ""
authors = ["Jérémie Galarneau <jeremie.galarneau@efficios.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^20.8b1"
click = "^7.1.2"
GitPython = "^3.1.30"
jenkinsapi = "^0.3.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reml = "reml.cli:main"
